# online-chess

./: .dockerignore  .gitignore  Cargo.toml  README.md  chess_online.db  docker-compose.yml  dump.rdb  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/backend/: .gitignore  Cargo.toml  Dockerfile  project.json
apps/backend/.sqlx/: query-052da1177fdc3c3f9e73c094b8e9575983eadc8c54662535cd4a53481caf8875.json  query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json
apps/backend/migrations/: 20251116163224_create_users.sql  20251129141929_create_matches.sql  20251129143858_fix_triggers.sql  20251129145042_alter_matches_for_matchmaking.sql  20251129225605_create_better_matchmaking.sql  20251130112555_rename_players_columns.sql  20251205233041_make_player1_id_not_null.sql  20251205233041_make_white_player_id_not_null.sql  20260322001848_matches_for_persistent_only.sql
apps/backend/src/: config.rs  error.rs  internal_broadcast.rs  main.rs  state.rs  testboard.rs
apps/backend/src/configs/: db.rs  env.rs  mod.rs  redis.rs
apps/backend/src/constants/: auth.rs  user.rs
apps/backend/src/extractors/: auth.rs  mod.rs
apps/backend/src/matchmaking/: mod.rs  postman_task.rs
apps/backend/src/models/: match.rs  match_state.rs  matchmaking.rs  mod.rs  user.rs
apps/backend/src/models/match/: common.rs  ephemeral_match.rs  mod.rs
apps/backend/src/repositories/: mod.rs
apps/backend/src/repositories/ephemeral_match/: ephemeral_match.rs  ephemeral_match_redis.rs  error.rs  mod.rs
apps/backend/src/repositories/match/: error.rs  match.rs  match_redis.rs  mod.rs
apps/backend/src/repositories/persistent_match/: error.rs  mod.rs  persistent_match.rs  (+1 more)
apps/backend/src/routes/: matchmaking.rs  mod.rs  realtime.rs
apps/backend/src/utils/: auth.rs  mod.rs  uuid.rs
(+146 files in other folders)
