[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"]}
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tower-cookies = "0.11.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
envy = "0.4.2"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
secrecy = "0.10.3"
