[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"]}
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tower-cookies = "0.11.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
envy = "0.4.2"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "chrono"] }
argon2 = { version = "0.5.3", features = ["std"] }
secrecy = "0.10.3"
either = "1.15.0"
chrono = "0.4.42"
thiserror = "2.0.17"
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["trace"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
rust-chess = { git = "https://github.com/yoyobara/rust-chess.git", branch = "main" }